fixed book now button not showing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -758,10 +758,6 @@ padding: 40px;}
     flex: 1;
   }
 
-  .build-my-deploy {
-    color: red;
-  }
-
   .shrink-0 {
     flex-shrink: 0;
   }
